--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
 
     // Circular bottom navigation
     implementation 'np.com.susanthapa:curved_bottom_navigation:0.6.5'
+
+    // Circular image
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
